--- a/categories.html
+++ b/categories.html
@@ -13,14 +13,14 @@
                 <header id="banner" class="body">
                         <h1><a href="https://nuyos.github.io/">뇨스의 개발 일기장</a></h1>
                         <nav><ul>
-                                                <li><a href="https://nuyos.github.io/category/beulrogeu.html">블로그</a></li>
+                                                <li><a href="https://nuyos.github.io/category/beulrogeu.html">blog</a></li>
                         </ul></nav>
                 </header><!-- /#banner -->
 
     <section id="content" class="body">
         <h1>Categories for 뇨스의 개발 일기장</h1>
         <ul>
-                <li><a href="https://nuyos.github.io/category/beulrogeu.html">블로그</a> (1)</li>
+                <li><a href="https://nuyos.github.io/category/beulrogeu.html">blog</a> (1)</li>
         </ul>
     </section>
 
