--- a/archives.html
+++ b/archives.html
@@ -13,7 +13,7 @@
                 <header id="banner" class="body">
                         <h1><a href="https://nuyos.github.io/">뇨스의 개발 일기장</a></h1>
                         <nav><ul>
-                                                <li><a href="https://nuyos.github.io/category/beulrogeu.html">블로그</a></li>
+                                                <li><a href="https://nuyos.github.io/category/beulrogeu.html">blog</a></li>
                         </ul></nav>
                 </header><!-- /#banner -->
     <section id="content" class="body">
